--- a/Locales/en.json
+++ b/Locales/en.json
@@ -187,11 +187,70 @@
     "trait_rogue_lightstrike_tooltip": "Small increase to base damage.",
     "trait_rogue_lightstrike_info": "Small increase to base damage.",
 
+    "trait_demon_mask": "Demon Mask",
+    "trait_demon_mask_desc": "Enables the Demon Damage System for the bearer.",
+    "trait_demon_mask_description": "Enables the Demon Damage System for the bearer.",
+    "trait_demon_mask_tooltip": "Required to trigger the Demon Damage System.",
+    "trait_demon_mask_info": "Required to trigger the Demon Damage System.",
+
+    "trait_demon_evasion": "Demonic Evasion",
+    "trait_demon_evasion_desc": "20% chance to dodge hits inside the Demon Damage System.",
+    "trait_demon_evasion_description": "20% chance to dodge hits inside the Demon Damage System.",
+    "trait_demon_evasion_tooltip": "20% chance to evade demon damage.",
+    "trait_demon_evasion_info": "20% chance to evade demon damage.",
+
+    "trait_demon_regen": "Demonic Regeneration",
+    "trait_demon_regen_desc": "Enables post-exchange healing within the Demon Damage System.",
+    "trait_demon_regen_description": "Enables post-exchange healing within the Demon Damage System.",
+    "trait_demon_regen_tooltip": "Restores HP according to demon rules.",
+    "trait_demon_regen_info": "Restores HP according to demon rules.",
+
+    "trait_demon_amplify": "Demonic Amplify",
+    "trait_demon_amplify_desc": "Kill multiplier on: +5% damage per 100 kills, capped at +500%.",
+    "trait_demon_amplify_description": "Kill multiplier on: +5% damage per 100 kills, capped at +500%.",
+    "trait_demon_amplify_tooltip": "+5% per 100 kills (max +500%).",
+    "trait_demon_amplify_info": "+5% per 100 kills (max +500%).",
+
+    "trait_demon_attack": "Demonic Assault",
+    "trait_demon_attack_desc": "Single demon hit deals at least the bearer’s kill count.",
+    "trait_demon_attack_description": "Single demon hit deals at least the bearer’s kill count.",
+    "trait_demon_attack_tooltip": "Damage floor ≥ kills.",
+    "trait_demon_attack_info": "Damage floor ≥ kills.",
+
+    "trait_demon_bulwark": "Demonic Bulwark",
+    "trait_demon_bulwark_desc": "Caps a single demon hit at 15% of max HP when bearing this trait.",
+    "trait_demon_bulwark_description": "Caps a single demon hit at 15% of max HP when bearing this trait.",
+    "trait_demon_bulwark_tooltip": "Single-hit cap 15% max HP.",
+    "trait_demon_bulwark_info": "Single-hit cap 15% max HP.",
+
+    "trait_demon_frenzy": "Demonic Frenzy",
+    "trait_demon_frenzy_desc": "Increases panel-damage weight (+1.5).",
+    "trait_demon_frenzy_description": "Increases panel-damage weight (+1.5).",
+    "trait_demon_frenzy_tooltip": "Higher weight on base damage.",
+    "trait_demon_frenzy_info": "Higher weight on base damage.",
+
+    "trait_demon_execute": "Demonic Execute",
+    "trait_demon_execute_desc": "When the target is ≤20% HP, demon damage ×1.25.",
+    "trait_demon_execute_description": "When the target is ≤20% HP, demon damage ×1.25.",
+    "trait_demon_execute_tooltip": "Execute threshold 20%, ×1.25 damage.",
+    "trait_demon_execute_info": "Execute threshold 20%, ×1.25 damage.",
+
+    "trait_demon_bloodthirst": "Demonic Bloodthirst",
+    "trait_demon_bloodthirst_desc": "Raises demon healing cap from 5% to 8% of max HP.",
+    "trait_demon_bloodthirst_description": "Raises demon healing cap from 5% to 8% of max HP.",
+    "trait_demon_bloodthirst_tooltip": "Healing cap 8% of max HP.",
+    "trait_demon_bloodthirst_info": "Healing cap 8% of max HP.",
+
     "trait_rogue_guarded": "Guarded",
     "trait_rogue_guarded_desc": "Small increase to max health.",
     "trait_rogue_guarded_description": "Small increase to max health.",
     "trait_rogue_guarded_tooltip": "Small increase to max health.",
     "trait_rogue_guarded_info": "Small increase to max health.",
+
+    "LOG_TXT": "Write TXT Logs",
+    "LOG_TXT Description": "When enabled, world events and system messages are written to TXT files under the logs directory.",
+    "LOG_DETAIL": "Detailed Logging",
+    "LOG_DETAIL Description": "Requires TXT logging to be enabled. Appends more detailed data to the log, including kings, lords, regicide events, city events, natural disasters, war outcomes, and more.",
 
     "trait_rogue_heal_on_kill": "Heal on Kill",
     "trait_rogue_heal_on_kill_desc": "Restore a small amount of health after a kill.",
