--- a/Locales/cz.json
+++ b/Locales/cz.json
@@ -14,9 +14,9 @@
     "AUTO_SPAWN": "自动生成生物",
     "AUTO_SPAWN Description": "开启后，世界会定期自动在地图上生成生物，需要打开世界法则的自动生成动物（默认关闭）。",
     "WILD_CLEANUP": "野生单位与超级生命清理",
-    "WILD_CLEANUP Description": "默认关闭。开启后：每次年龄更新清除单位的“超级生命”特质；对野生单位有 50% 概率直接处死。",
-    "STAT_PATCH": "击杀数主宰",
-    "STAT_PATCH Description": "开启后：击杀≥10的单位获得每击杀 +100 最大生命与 +2 攻击，大部分特质属性加成失效。默认关闭。",
+    "WILD_CLEANUP Description": "默认关闭。开启后：每次年龄更新清除单位的“超级生命”特质；对野生单位有 90% 概率直接处死。",
+    "STAT_PATCH": "额外击杀数加成",
+    "STAT_PATCH Description": "开启后：击杀≥10的单位获得每击杀 +100 最大生命与 +2 攻击，可与其他mod特质兼容。默认关闭。",
     "DAOZHU_GROUP": "道主",
     "ASCENDED_DEMON_GROUP": "飞升恶魔",
     "MORTAL_COIL_GROUP": "凡躯砺炼",
@@ -82,7 +82,7 @@
     "trait_path_of_battle_desc": "在大道争锋中击败至少一名候选者。",
     "trait_path_of_battle_description": "在大道争锋中击败至少一名候选者。",
     "trait_path_of_battle_tooltip": "在大道争锋中击败至少一名候选者。",
-    "trait_path_of_battle_info": "在大道争锋中击败至少一名候选者。",
+    "trait_path_of_battle_info": "在大道争锋/恶魔飞升中击败至少一名候选者。",
 
     "trait_ageless": "不朽之始",
     "trait_ageless_desc": "年龄超过500岁且战力超过10万。",
@@ -130,134 +130,145 @@
     "trait_eternal_legend_desc": "不借外力屹立世界之巅。",
     "trait_eternal_legend_description": "不借外力屹立世界之巅。",
     "trait_eternal_legend_tooltip": "不借外力屹立世界之巅。",
-    "trait_eternal_legend_info": "不借外力屹立世界之巅。",
+    "trait_eternal_legend_info": "不借外力屹立世界之巅。（战力第一）",
 
     "trait_rogue_kill_plus_one": "战场收割者",
     "trait_rogue_kill_plus_one_desc": "每次击杀时，额外 +1 击杀数（轻量滚雪球）。",
     "trait_rogue_kill_plus_one_description": "每次击杀时，额外 +1 击杀数（轻量滚雪球）。",
     "trait_rogue_kill_plus_one_tooltip": "每次击杀时，额外 +1 击杀数（轻量滚雪球）。",
-    "trait_rogue_kill_plus_one_info": "每次击杀时，额外 +1 击杀数（轻量滚雪球）。",
+    "trait_rogue_kill_plus_one_info": "每次击杀时，额外 +1 击杀数（轻量滚雪球）。（出生小记录获得）",
 
     "trait_rogue_kill_lucky10": "幸运劫掠",
     "trait_rogue_kill_lucky10_desc": "击杀时 1% 概率额外 +10 击杀数（偶尔暴富）。",
     "trait_rogue_kill_lucky10_description": "击杀时 1% 概率额外 +10 击杀数（偶尔暴富）。",
     "trait_rogue_kill_lucky10_tooltip": "击杀时 1% 概率额外 +10 击杀数（偶尔暴富）。",
-    "trait_rogue_kill_lucky10_info": "击杀时 1% 概率额外 +10 击杀数（偶尔暴富）。",
+    "trait_rogue_kill_lucky10_info": "击杀时 1% 概率额外 +10 击杀数（偶尔暴富）。（出生小记录获得）",
 
     "trait_rogue_starter_boost": "起步加成",
     "trait_rogue_starter_boost_desc": "开局获得小幅生命与攻击加成。",
     "trait_rogue_starter_boost_description": "开局获得小幅生命与攻击加成。",
     "trait_rogue_starter_boost_tooltip": "开局获得小幅生命与攻击加成。",
-    "trait_rogue_starter_boost_info": "开局获得小幅生命与攻击加成。",
+    "trait_rogue_starter_boost_info": "开局获得小幅生命与攻击加成。（出生小记录获得）",
 
     "trait_rogue_swift": "迅捷",
     "trait_rogue_swift_desc": "移动速度略微提升。",
     "trait_rogue_swift_description": "移动速度略微提升。",
     "trait_rogue_swift_tooltip": "移动速度略微提升。",
-    "trait_rogue_swift_info": "移动速度略微提升。",
+    "trait_rogue_swift_info": "移动速度略微提升。（出生小记录获得）",
 
     "trait_rogue_keen": "灵锐",
     "trait_rogue_keen_desc": "暴击率略微提升。",
     "trait_rogue_keen_description": "暴击率略微提升。",
     "trait_rogue_keen_tooltip": "暴击率略微提升。",
-    "trait_rogue_keen_info": "暴击率略微提升。",
+    "trait_rogue_keen_info": "暴击率略微提升。（出生小记录获得）",
 
     "trait_rogue_tough": "坚毅",
     "trait_rogue_tough_desc": "护甲略微提升。",
     "trait_rogue_tough_description": "护甲略微提升。",
     "trait_rogue_tough_tooltip": "护甲略微提升。",
-    "trait_rogue_tough_info": "护甲略微提升。",
+    "trait_rogue_tough_info": "护甲略微提升。（出生小记录获得）",
 
     "trait_rogue_enduring": "持久",
     "trait_rogue_enduring_desc": "体力上限略微提升。",
     "trait_rogue_enduring_description": "体力上限略微提升。",
     "trait_rogue_enduring_tooltip": "体力上限略微提升。",
-    "trait_rogue_enduring_info": "体力上限略微提升。",
+    "trait_rogue_enduring_info": "体力上限略微提升。（出生小记录获得）",
 
     "trait_rogue_longlife": "长寿",
     "trait_rogue_longlife_desc": "自然寿命提升。",
     "trait_rogue_longlife_description": "自然寿命提升。",
     "trait_rogue_longlife_tooltip": "自然寿命提升。",
-    "trait_rogue_longlife_info": "自然寿命提升。",
+    "trait_rogue_longlife_info": "自然寿命提升。（出生小记录获得）",
 
     "trait_rogue_lightstrike": "轻斩",
     "trait_rogue_lightstrike_desc": "基础伤害小幅提升。",
     "trait_rogue_lightstrike_description": "基础伤害小幅提升。",
     "trait_rogue_lightstrike_tooltip": "基础伤害小幅提升。",
-    "trait_rogue_lightstrike_info": "基础伤害小幅提升。",
+    "trait_rogue_lightstrike_info": "基础伤害小幅提升。（出生小记录获得）",
 
     "trait_rogue_guarded": "厚实",
     "trait_rogue_guarded_desc": "生命上限小幅提升。",
     "trait_rogue_guarded_description": "生命上限小幅提升。",
     "trait_rogue_guarded_tooltip": "生命上限小幅提升。",
-    "trait_rogue_guarded_info": "生命上限小幅提升。",
+    "trait_rogue_guarded_info": "生命上限小幅提升。（出生小记录获得）",
 
     "trait_demon_mask": "恶魔面具",
     "trait_demon_mask_desc": "拥有该特质才会触发恶魔伤害系统。",
     "trait_demon_mask_description": "拥有该特质才会触发恶魔伤害系统。",
     "trait_demon_mask_tooltip": "拥有该特质才会触发恶魔伤害系统。",
-    "trait_demon_mask_info": "拥有该特质才会触发恶魔伤害系统。",
+    "trait_demon_mask_info": "拥有该特质才会触发恶魔伤害系统。（击杀数大于10时自动获得）",
 
     "trait_demon_evasion": "恶魔闪避",
     "trait_demon_evasion_desc": "有20%几率闪避恶魔伤害系统内的命中。",
     "trait_demon_evasion_description": "有20%几率闪避恶魔伤害系统内的命中。",
     "trait_demon_evasion_tooltip": "20%几率闪避恶魔伤害。",
-    "trait_demon_evasion_info": "20%几率闪避恶魔伤害。",
+    "trait_demon_evasion_info": "20%几率闪避恶魔伤害。（击杀时1%几率获得）",
 
     "trait_demon_regen": "恶魔回血",
     "trait_demon_regen_desc": "启用恶魔伤害系统的战后回复。",
     "trait_demon_regen_description": "启用恶魔伤害系统的战后回复。",
     "trait_demon_regen_tooltip": "参与恶魔伤害系统时按规则回复生命。",
-    "trait_demon_regen_info": "参与恶魔伤害系统时按规则回复生命。",
+    "trait_demon_regen_info": "参与恶魔伤害系统时按规则回复生命。（击杀时1%几率获得）",
 
     "trait_demon_amplify": "恶魔增幅",
     "trait_demon_amplify_desc": "启用击杀倍率：每100击杀+5%，上限+500%。",
     "trait_demon_amplify_description": "启用击杀倍率：每100击杀+5%，上限+500%。",
     "trait_demon_amplify_tooltip": "每100击杀+5%伤害（封顶+500%）。",
-    "trait_demon_amplify_info": "每100击杀+5%伤害（封顶+500%）。",
+    "trait_demon_amplify_info": "每100击杀+5%伤害（封顶+500%）（击杀时1%几率获得）。",
 
     "trait_demon_attack": "恶魔攻击",
     "trait_demon_attack_desc": "恶魔伤害的单次命中至少等于自身击杀数。",
     "trait_demon_attack_description": "恶魔伤害的单次命中至少等于自身击杀数。",
     "trait_demon_attack_tooltip": "伤害保底≥击杀数。",
-    "trait_demon_attack_info": "伤害保底≥击杀数。",
+    "trait_demon_attack_info": "伤害保底≥击杀数。（击杀时1%几率获得）",
 
     "trait_demon_bulwark": "恶魔壁障",
     "trait_demon_bulwark_desc": "被恶魔伤害命中时，单次伤害≤最大生命的15%。",
     "trait_demon_bulwark_description": "被恶魔伤害命中时，单次伤害≤最大生命的15%。",
     "trait_demon_bulwark_tooltip": "单次伤害封顶15%最大生命。",
-    "trait_demon_bulwark_info": "单次伤害封顶15%最大生命。",
+    "trait_demon_bulwark_info": "单次伤害封顶15%最大生命。（击杀时1%几率获得）",
 
     "trait_demon_frenzy": "恶魔狂热",
-    "trait_demon_frenzy_desc": "提高面板伤害权重（+1.5）。",
-    "trait_demon_frenzy_description": "提高面板伤害权重（+1.5）。",
-    "trait_demon_frenzy_tooltip": "面板伤害权重提升。",
-    "trait_demon_frenzy_info": "面板伤害权重提升。",
+    "trait_demon_frenzy_desc": "提高恶魔伤害权重（+1.5）。",
+    "trait_demon_frenzy_description": "提高恶魔伤害权重（+1.5）。",
+    "trait_demon_frenzy_tooltip": "恶魔伤害权重提升。",
+    "trait_demon_frenzy_info": "恶魔伤害权重提升。（击杀时1%几率获得）",
 
     "trait_demon_execute": "恶魔斩首",
     "trait_demon_execute_desc": "目标生命≤20%时，本次恶魔伤害×1.25。",
     "trait_demon_execute_description": "目标生命≤20%时，本次恶魔伤害×1.25。",
     "trait_demon_execute_tooltip": "处决线20%，伤害×1.25。",
-    "trait_demon_execute_info": "处决线20%，伤害×1.25。",
+    "trait_demon_execute_info": "处决线20%，伤害×1.25。（击杀时1%几率获得）",
 
     "trait_demon_bloodthirst": "恶魔嗜血",
     "trait_demon_bloodthirst_desc": "恶魔伤害系统的生命回复上限从5%提升到8%。",
     "trait_demon_bloodthirst_description": "恶魔伤害系统的生命回复上限从5%提升到8%。",
     "trait_demon_bloodthirst_tooltip": "回血上限8%最大生命。",
-    "trait_demon_bloodthirst_info": "回血上限8%最大生命。",
+    "trait_demon_bloodthirst_info": "回血上限8%最大生命。（击杀时1%几率获得）",
 
     "LOG_TXT": "记录TXT日志",
     "LOG_TXT Description": "开启后，将把世界事件和系统信息写入 logs 目录下的 TXT 文件。",
     "LOG_DETAIL": "记录详细信息",
     "LOG_DETAIL Description": "需先开启记录TXT日志，在日志中追加更详细的数据（国王、领主、弑君事件、城市事件、天灾和战争结果等等）。",
 
+    "trait_demon_env_immunity": "恶魔免疫",
+    "trait_demon_env_immunity_desc": "免疫大部分环境伤害（例如火焰、寒冷、燃烧、毒雾、酸雨、闪电等）。",
+    "trait_demon_env_immunity_description": "免疫大部分环境伤害（例如火焰、寒冷、燃烧、毒雾、酸雨、闪电等）。",
+    "trait_demon_env_immunity_tooltip": "环境伤害免疫。",
+    "trait_demon_env_immunity_info": "不会受到常见环境来源的持续或瞬时伤害。（击杀数大于30时自动获得）",
+
+    "trait_demon_kill_bonus": "恶魔加成",
+    "trait_demon_kill_bonus_desc": "击杀带来永续增长：每次击杀 +100 最大生命、+2 攻击（数值叠加逻辑由模组实现）。",
+    "trait_demon_kill_bonus_description": "击杀带来永续增长：每次击杀 +100 最大生命、+2 攻击（数值叠加逻辑由模组实现）。",
+    "trait_demon_kill_bonus_tooltip": "每击杀：+100 MaxHP、+2 攻击。",
+    "trait_demon_kill_bonus_info": "成长型特质，数值随击杀累积。（击杀数大于10时自动获得）",
 
 
     "trait_rogue_heal_on_kill": "击杀回春",
     "trait_rogue_heal_on_kill_desc": "击杀后回复少量生命。",
     "trait_rogue_heal_on_kill_description": "击杀后回复少量生命。",
     "trait_rogue_heal_on_kill_tooltip": "击杀后回复少量生命。",
-    "trait_rogue_heal_on_kill_info": "击杀后回复少量生命。"
+    "trait_rogue_heal_on_kill_info": "击杀后回复少量生命。（击杀时1%几率获得）"
 
 
 
